--- a/frontend/src/screens/HomeScreenStorage/HomeScreenStorage.css
+++ b/frontend/src/screens/HomeScreenStorage/HomeScreenStorage.css
@@ -385,7 +385,7 @@
     width: 31%;
   }
   .home-text {
-    width: 53%;
+    width: 75%;
     font-size: 14px;
   }
   .hero-image-workout {
